Objective-C GData Framework Release Notes

Project site:     http://code.google.com/p/gdata-objectivec-client/
DIscussion group: http://groups.google.com/group/gdata-objectivec-client-framework


Changes since 1.1.0

- Added support for Google Code Search

- Added http logging (see GDataHTTPFetcherLogging.h)

- Fixed escaping algorithm for query parameter generation.

- Store cookies on redirects (thanks riggle)

- Calendar sample app no longer attempts to set the author value for an event,
  as the author is always the authenticated user
  
- Removed method for retrieving a calendar event feed for a username

- Added ascending order parameter to Query base class

- Added more Calendar query parameters

- Authentication errors are now also returned in the userInfo with the "error"
  key (thanks ghulands)
  
- Add rel constants for GDataWhere (thanks riggle)


Release 1.1.0
4-June-2007
Changes since 1.0.0

- Added photos, media, and geo data classes, and Picasa Web Albums service
  classes

- Interfaces now use proper subclasses of GDataValueConstruct to ensure
  that XML element names are generated from objects created from scratch.  
  
- The XMLElement extension methods may now pass nil as default name to
  their superclass to use the extension's defined default name.
  
- Added ACL feed support, and ACL display and editing in Calendar sample
  
- GDataAtomPubControl convenience creator adds the "app" namespace for the
  element
  
- Fixed some incorrect selector signatures in the Blogger sample

- Changed GDataHTTPFetcher to allow redirects from http to https

- Upload of http data may now be monitored with progress callbacks

- GData fetcher now can respond to proxy credential challenges

- Entry content is now a GDataEntryContent object rather than a text construct
  
- Add accidentally omitted extendedProperty interfaces to 
  GDataEntryCalendarEvent and fix extendedProperty default element
  name (thanks iwankerl)
   
   
Release 1.0.0
16-April-2007
